--- a/MauiTest/wwwroot/index.html
+++ b/MauiTest/wwwroot/index.html
@@ -23,6 +23,7 @@
     </div>
 
     <script src="_framework/blazor.webview.js" autostart="false"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 
 </body>
 
